# distray

./: CMakeLists.txt  Frames.cpp  Makefile  Parameters.cpp  Parameters.hpp  README.md  main.cpp
include/: README.md  nng
src/: CMakeLists.txt  Drp.proto  Frames.cpp  Frames.hpp  IncomingBuffer.hpp  OutgoingBuffer.hpp  Parameters.cpp  Parameters.hpp  RemoteWorker.cpp  RemoteWorker.hpp  controller.cpp  controller.hpp  main.cpp  proxy.cpp  proxy.hpp  unittest.cpp  unittest.hpp  util.cpp  util.hpp  worker.cpp  worker.hpp
